[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/ArcadeAlternate.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.72549, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0.0470588, 0.0745098, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "bosconian"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 824.0
margin_bottom = 400.0
custom_constants/separation = 20

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 57.0
focus_neighbour_top = NodePath("../QuitButton")
custom_colors/font_color_focus = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_pressed = Color( 0.533333, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Start Game"
flat = true

[node name="ConfigButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 824.0
margin_bottom = 134.0
custom_colors/font_color_focus = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_pressed = Color( 0.533333, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 4 )
text = "Button Config"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 824.0
margin_bottom = 211.0
focus_neighbour_bottom = NodePath("../StartGameButton")
custom_colors/font_color_focus = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_pressed = Color( 0.533333, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 5 )
text = "Quit"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ConfigButton" to="." method="_on_ConfigButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
